# mctFDK

./: CMakeLists.txt  Correction  Draw.py  main.cpp
include/: mct.h  mctCudaFDKAlgorithm.h  mctCudaUtilities.h  mctGlobals.h  mctHardbeamCorrection.h  mctRampFilter.h  mctReconstructionGeometry.h  mctSinogramPreProcess.h  mctSupport.h
src/: mctCudaFDKAlgorithm.cu  mctCudaUtilities.cpp  mctHardbeamCorrection.cpp  mctRampFilter.cpp  mctSinogramPreProcess.cpp
